table formatting updated

--- a/book-a-reading-room-visit.web/Views/Booking/BookingConfirmation.cshtml
+++ b/book-a-reading-room-visit.web/Views/Booking/BookingConfirmation.cshtml
@@ -70,9 +70,7 @@
                                 </tr>
                             }
                             <tr>
-                                <td>
-                                    <span class="bold-text">Seat number</span>
-                                </td>
+                                <th scope="row">Seat number</th>
                                 <td>
                                     @Model.SeatNumber
                                     <p>Based on availability, we may need to change your seat on the date of your visit.</p>
