Update homepage html

--- a/book-a-reading-room-visit.web/Views/Home/Index.cshtml
+++ b/book-a-reading-room-visit.web/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
 
     <div class="container content-wrapper">
 
-        <div class="heading-text">
+        <div class="heading">
             <div class="row">
                 <div class="col-md-12">
                     <p>
@@ -27,7 +27,7 @@
                 <div class="col-md-12">
                     <h2>Before you book</h2>
                     <p>You will need a reader’s ticket number to complete the booking</p>
-                    <a href="#">Register or renew a reader’s ticket</a>
+                    <a href="#">Register or renew a reader’s ticket ></a>
                 </div>
             </div>
         </div>
