--- a/book-a-reading-room-visit.web/Views/Home/Availability.cshtml
+++ b/book-a-reading-room-visit.web/Views/Home/Availability.cshtml
@@ -4,15 +4,14 @@
 
 @model AvailabilityViewModel
 @{
-    ViewData["Title"] = "Visit availability";
+ViewData["Title"] = "Visit availability";
 }
 
 <h1 class="display-4">1. Select a date</h1>
 
-<div class="text-center">
+<div class="container content-wrapper">
 
-    <div class="container content-wrapper">
-
+    <div class="text-center">
         <div id="progress-bar">
             <div class="row">
                 <div class="col-md-12">
@@ -26,99 +25,142 @@
                 </div>
             </div>
         </div>
+    </div>
 
+    <div class="heading">
         <div class="row">
-            <div id="room-selection" class="align-left">
-                <div class="col-md-4 col-sm-4">
+            <div class="col-lg-8 col-md-8">
+                <h2>
+                    You are viewing @(Model.BookingType == BookingTypes.StandardOrderVisit ? "standard visit availability" : "bulk order visit availability")
+                </h2>
+            </div>
+            <div class="col-lg-4 col-md-4">
+                <div class="visit-toggler">
                     @if (Model.BookingType == BookingTypes.StandardOrderVisit)
                     {
-                        <h2 class="align-left">Standard visit availability</h2>
+                        <a href="@Url.Action("Availability", "Home", new { bookingType = "bulk-order-visit" })">Bulk visit availability ></a>
                     }
 
                     else
                     {
-                        <h2 class="align-left">Bulk visit availability</h2>
+                        <a href="@Url.Action("Availability", "Home", new { bookingType = "standard-order-visit" })">Standard visit availability ></a>
                     }
-
-                    @if (!string.IsNullOrWhiteSpace(Model.ErrorMessage))
-                    {
-                        <span>@Model.ErrorMessage</span>
-                    }
-
-                    @if (Model.BookingType == BookingTypes.StandardOrderVisit)
-                    {
-                        <form id="room-selection-form" action="@Url.Action("Availability", "Home", new { bookingType = Model.BookingType.ToStringURL() })" method="GET">
-                            <fieldset>
-                                <legend class="sr-only">Select reading room</legend>
-
-                                <div>
-                                    <label for="standard-room">Standard reading room</label>
-                                    @Html.RadioButton("seattype", SeatTypes.StdRRSeat.ToStringURL(), Model.SeatType.ToStringURL() == SeatTypes.StdRRSeat.ToStringURL(), new { id = "standard-room" })
-                                </div>
-
-                                <div>
-                                    <label for="map-and-lg-room">Map and large document reading room</label>
-                                    @Html.RadioButton("seattype", SeatTypes.MandLRR.ToStringURL(), Model.SeatType.ToStringURL() == SeatTypes.MandLRR.ToStringURL(), new { id = "map-and-lg-room" })
-                                </div>
-                            </fieldset>
-
-                            <button class="button" type="submit">Update</button>
-                        </form>
-                    }
-
-                    <div class="prompt-white">
-                        <p class="no-margin">
-                            Camera stands are now provided for all seats in our reading rooms
-                        </p>
-                    </div>
-
-                    <div class="visit-toggler">
-                        @if (Model.BookingType == BookingTypes.StandardOrderVisit)
-                        {
-                            <a href="@Url.Action("Availability", "Home", new { bookingType = "bulk-order-visit" })">Bulk visit availability ></a>
-                        }
-
-                        else
-                        {
-                            <a href="@Url.Action("Availability", "Home", new { bookingType = "standard-order-visit" })">Standard visit availability ></a>
-                        }
-                    </div>
-                </div>
-
-            </div>
-
-            <div id="date-selection">
-                <div class="col-md-8 col-sm-8">
-                    <ul>
-                        @for (var index = 0; index < Model.AvailableBookings.Count; index++)
-                        {
-                            <li class="date">
-                                @if (Model.AvailableBookings[index].AvailableSeats == 0)
-                                {
-                                    <div class="col-md-12 col-sm-12 col-xs-12">
-                                        <span class="col-md-6 col-sm-6 col-xs-6 align-left">@Model.AvailableBookings[index].ToDate</span>
-                                        <span class="col-md-6 col-sm-6 col-xs-6 align-right">@Model.AvailableBookings[index].AvailableSeats places available</span>
-                                    </div>
-                                }
-                                else
-                                {
-                                    <form action="@Url.Action("SecureBooking", "Booking", new { bookingType = @Model.BookingType.ToStringURL() })" method="POST">
-                                        @Html.AntiForgeryToken()
-                                        @Html.Hidden("seattype", Model.SeatType.ToStringURL(), new { id = "" })
-                                        @Html.Hidden("bookingstartdate", Model.AvailableBookings[index].Date, new { id = "" })
-                                        <button class="button" type="submit">
-                                            <span class="col-md-12 col-sm-12 col-xs-12">
-                                                <span class="col-md-6 col-sm-6 col-xs-6 align-left">@Model.AvailableBookings[index].ToDate</span>
-                                                <span class="col-md-6 col-sm-6 col-xs-6 align-right">@Model.AvailableBookings[index].AvailableSeats places available</span>
-                                            </span>
-                                        </button>
-                                    </form>
-                                }
-                            </li>
-                        }
-                    </ul>
                 </div>
             </div>
         </div>
     </div>
+
+    <div class="row">
+        <div id="room-selection" class="align-left">
+            <div class="col-md-4 col-sm-4">
+                <h3>@(Model.BookingType == BookingTypes.StandardOrderVisit ? "Select a preferred reading room" : "Room information")</h3>
+
+                @if (!string.IsNullOrWhiteSpace(Model.ErrorMessage))
+                {
+                    <span class="form-error">Error</span>
+                }
+
+                @if (Model.BookingType == BookingTypes.StandardOrderVisit)
+                {
+                    <form id="room-selection-form" action="@Url.Action("Availability", "Home", new { bookingType = @Model.BookingType.ToStringURL() })" method="GET">
+                        <fieldset>
+                            <legend class="sr-only">Select reading room</legend>
+
+                            <div>
+                                <label for="standard-room">Standard reading room</label>
+                                @Html.RadioButtonFor(Model => Model.SeatType, SeatTypes.StdRRSeat, new { id = "standard-room" })
+                                <p class="helper-text">All seats will have a camera stand provided</p>
+                            </div>
+
+                            <div class="border-top">
+                                <label for="map-and-lg-room">Map and large document reading room</label>
+                                @Html.RadioButtonFor(Model => Model.SeatType, SeatTypes.MandLRR, new { id = "map-and-lg-room" })
+                                <p class="helper-text">
+                                    Some camera stands are available. If you need one, please tell us in the 'Additional access requirements
+                                    or research requests' box when you complete your document order
+                                </p>
+                            </div>
+
+                            <div class="border-top">
+                                <p class="helper-text">
+                                    We will ensure you are in the most appropriate reading for the documents that you order.
+                                    If you are unsure which room you need, select Document reading room.
+                                </p>
+                            </div>
+                        </fieldset>
+
+                        <div class="prompt-white">
+                            <p class="bold-text">Are accessible seats available?</p>
+                            <p class="helper-text no-margin">
+                                All seats in our reading rooms are accessible. You can tell us about your access needs when you order your
+                                documents in step 4.
+                            </p>
+                        </div>
+
+                        <button class="button" type="submit">Update</button>
+                    </form>
+                }
+
+                else
+                {
+                    <div class="prompt-white">
+                        <p class="bold-text">Which room will I be in?</p>
+                        <p class="helper-text no-margin">All of our bulk orders are in the Map and Large document reading room</p>
+                    </div>
+
+                    <div class="prompt-white">
+                        <p class="bold-text">Are camera stands available?</p>
+                        <p class="helper-text no-margin">
+                            Some camera stands are available. If you need one, please tell us in the 'Additional access requirements or
+                            research requests' box when you complete your document order
+                        </p>
+                    </div>
+
+                    <div class="prompt-white">
+                        <p class="bold-text">Are accessible seats available?</p>
+                        <p class="helper-text no-margin">
+                            All seats in our reading rooms are accessible. You can tell us about your access needs when you order your
+                            documents in step 4.
+                        </p>
+                    </div>
+                }
+            </div>
+
+        </div>
+
+        <div id="date-selection">
+            <div class="col-md-8 col-sm-8">
+                <h3>Available dates</h3>
+                <ul>
+                    @for (var index = 0; index < Model.AvailableBookings.Count; index++)
+                    {
+                        <li class="date">
+                            @if (Model.AvailableBookings[index].AvailableSeats == 0)
+                            {
+                                <div class="col-md-12 col-sm-12 col-xs-12">
+                                    <span class="col-md-6 col-sm-6 col-xs-6 align-left">@Model.AvailableBookings[index].ToDate</span>
+                                    <span class="col-md-6 col-sm-6 col-xs-6 align-right">@Model.AvailableBookings[index].AvailableSeats places available</span>
+                                </div>
+                            }
+                            else
+                            {
+                                <form action="@Url.Action("SecureBooking", "Booking", new { bookingType = @Model.BookingType.ToStringURL() })" method="POST">
+                                    @Html.AntiForgeryToken()
+                                    @Html.HiddenFor(Model => Model.SeatType, new { id = "" })
+                                    @Html.Hidden("bookingstartdate", Model.AvailableBookings[index].Date, new { id = "" })
+                                    <button class="button" type="submit">
+                                        <span class="col-md-12 col-sm-12 col-xs-12">
+                                            <span class="col-md-6 col-sm-6 col-xs-6 align-left">@Model.AvailableBookings[index].ToDate</span>
+                                            <span class="col-md-6 col-sm-6 col-xs-6 align-right">@Model.AvailableBookings[index].AvailableSeats places available</span>
+                                        </span>
+                                    </button>
+                                </form>
+                            }
+                        </li>
+                    }
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
 </div>
