--- a/book-a-reading-room-visit.web/Views/Booking/CancelBooking.cshtml
+++ b/book-a-reading-room-visit.web/Views/Booking/CancelBooking.cshtml
@@ -10,7 +10,7 @@
 
 <div class="text-center">
 
-    <div class="container">
+    <div class="container content-wrapper">
 
         <div class="heading align-left">
             <div class="row">
