Add thank you page

--- a/book-a-reading-room-visit.web/Views/Booking/ThankYou.cshtml
+++ b/book-a-reading-room-visit.web/Views/Booking/ThankYou.cshtml
@@ -8,7 +8,7 @@
 
 <h1 class="display-4">Thank you</h1>
 
-<div class="container">
+<div class="container content-wrapper">
 
     <div class="heading">
         <div class="row">
