--- a/book-a-reading-room-visit.web/Views/Booking/ContinueLater.cshtml
+++ b/book-a-reading-room-visit.web/Views/Booking/ContinueLater.cshtml
@@ -1,5 +1,4 @@
-﻿@using book_a_reading_room_visit.model
-@using book_a_reading_room_visit.web.Helper
+﻿@using book_a_reading_room_visit.web.Helper
 @using book_a_reading_room_visit.web.Models
 
 @{
@@ -8,12 +7,12 @@
 
 <h1 class="display-4">Before you leave</h1>
 
-<div class="container">
+<div class="container content-wrapper">
 
     <div class="heading">
         <div class="row">
             <div class="col-md-12">
-                <p>
+                <p class="no-margin">
                     You have a provisional booking for:
                 </p>
             </div>
@@ -28,39 +27,28 @@
                         <tr>
                             <th scope="row">Booking ref</th>
                             <td>
-                                @(Model.BookingReference)
+                                Booking reference
                             </td>
                         </tr>
                         <tr>
                             <th scope="row">Visit type</th>
                             <td>
-                                @(Model.BookingType == BookingTypes.StandardOrderVisit ? "Standard visit" : "Bulk order visit")
+                                Visit type
                             </td>
                         </tr>
                         <tr>
                             <th scope="row">Visit date</th>
-                            <td>@($"{Model.BookingStartDate:dddd dd MMMM yyyy}")</td>
+                            <td>Visit date</td>
                         </tr>
                         <tr>
                             <th scope="row">Reading room</th>
-                            @if (Model.BookingType == BookingTypes.StandardOrderVisit)
-                            {
-                                @if (Model.SeatType == SeatTypes.StdRRSeat)
-                                {
-                                    <td>Standard document reading room</td>
-                                }
-                                else
-                                {
-                                    <td>Map and large document reading room</td>
-                                }
-
-                            }
+                            <td>Reading room</td>
                         </tr>
                         <tr>
                             <th scope="row">Seat number</th>
                             <td>
-                                @Model.SeatNumber
-                                <p class="helper-text">Based on availability, we may need to change your seat on the date of your visit.</p>
+                                Seat number
+                                <p class="helper-text no-margin">Based on availability, we may need to change your seat on the date of your visit.</p>
                             </td>
                         </tr>
                     </tbody>
@@ -89,7 +77,7 @@
 
                     <p>Complete your document order form at any point before the deadline otherwise your visit will be cancelled.</p>
 
-                    <p>You will need your booking reference and reader's ticket number to return to this booking.</p>
+                    <p class="no-margin">You will need your booking reference and reader's ticket number to return to this booking.</p>
                 </div>
             </div>
         </div>
@@ -98,13 +86,15 @@
             <div class="row">
                 <div class="col-md-12">
                     <h2>Are you sure you want to continue later?</h2>
-                    <span class="col-lg-4 col-md-4">
-                        <a class="button primary" href="@Url.Action("Booking", "ThankYou")">Yes, I'd like to continue later</a>
-                    </span>
+                    <div class="margin-top">
+                        <span class="col-lg-4 col-md-4">
+                            <a class="button primary" href="@Url.Action("Booking", "ThankYou")">Yes, I'd like to continue later</a>
+                        </span>
 
-                    <span class="col-lg-4 col-md-4">
-                        <a class="button primary" href="#">No, take me to the order form</a>
-                    </span>
+                        <span class="col-lg-4 col-md-4">
+                            <a class="button primary" href="#">No, take me to the order form</a>
+                        </span>
+                    </div>
                 </div>
             </div>
         </div>
