Update href to link to continue later page

--- a/book-a-reading-room-visit.web/Views/Booking/BookingConfirmation.cshtml
+++ b/book-a-reading-room-visit.web/Views/Booking/BookingConfirmation.cshtml
@@ -106,7 +106,7 @@ ViewData["Title"] = "Booking confirmation";
                 </span>
 
                 <span class="col-lg-4 col-md-4">
-                    <a class="button primary" href="#">I'd like to continue later</a>
+                    <a class="button primary" href="@Url.Action("Booking", "ContinueLater")">I'd like to continue later</a>
                 </span>
             </div>
         </div>
