--- a/book-a-reading-room-visit.web/wwwroot/css/sass/_booking-system.scss
+++ b/book-a-reading-room-visit.web/wwwroot/css/sass/_booking-system.scss
@@ -233,6 +233,10 @@ form {
 }
 
 .reader-ticket-form {
+    legend {
+        font-size: 16px;
+    }
+
     input[type=text] {
         display: block;
         margin-top: 1em;
