--- a/book-a-reading-room-visit.web/Views/Booking/SecureBooking.cshtml
+++ b/book-a-reading-room-visit.web/Views/Booking/SecureBooking.cshtml
@@ -7,7 +7,7 @@
     ViewData["Title"] = "Secure booking";
 }
 
-<h1 class="display-4">2. Enter your reader's tickets</h1>
+<h1 class="display-4">2. Enter your details</h1>
 
 <div class="container content-wrapper">
 
@@ -17,7 +17,7 @@
             <div class="col-md-12">
                 <ol>
                     <li><span class="step-number">1</span> <span class="step">Select a date</span></li>
-                    <li aria-current="page" class="active"><span class="step-number">2</span> <span class="step">Enter your reader's ticket</span></li>
+                    <li aria-current="page" class="active"><span class="step-number">2</span> <span class="step">Enter your details</span></li>
                     <li><span class="step-number">3</span> <span class="step">Reservation confirmation</span></li>
                     <li><span class="step-number">4</span> <span class="step">Order documents</span></li>
                     <li><span class="step-number">5</span> <span class="step">Order complete</span></li>
