Add styles for no availability
This ensures that listings for dates where there is no
availability matches those where there is.

--- a/book-a-reading-room-visit.web/Views/Home/Availability.cshtml
+++ b/book-a-reading-room-visit.web/Views/Home/Availability.cshtml
@@ -136,10 +136,10 @@ ViewData["Title"] = "Visit availability";
                         <li class="date">
                             @if (Model.AvailableBookings[index].AvailableSeats == 0)
                             {
-                                <div class="col-md-12 col-sm-12 col-xs-12">
+                                <span class="col-md-12 col-sm-12 col-xs-12 no-availability">
                                     <span class="col-md-6 col-sm-6 col-xs-6 align-left">@Model.AvailableBookings[index].ToDate</span>
                                     <span class="col-md-6 col-sm-6 col-xs-6 align-right">@Model.AvailableBookings[index].AvailableSeats places available</span>
-                                </div>
+                                </span>
                             }
                             else
                             {
