--- a/book-a-reading-room-visit.web/wwwroot/css/sass/_mixin.scss
+++ b/book-a-reading-room-visit.web/wwwroot/css/sass/_mixin.scss
@@ -3,3 +3,22 @@
   outline-offset: 0;
   z-index: 999;
 }
+
+@mixin availability-list-item {
+    color: #000;
+    display: flex;
+    padding: 15px;
+    font-family: "Roboto Mono",sans-serif;
+    font-size: 16px;
+    border: 2px solid #ddd;
+    margin-bottom: 1em;
+    text-decoration: none;
+    width: 100%;
+
+    span {
+        padding: 0;
+        span {
+            padding: 0;
+        }
+    }
+}
