Add map and large document reading room to bulk order summary

--- a/book-a-reading-room-visit.web/Views/Booking/BookingConfirmation.cshtml
+++ b/book-a-reading-room-visit.web/Views/Booking/BookingConfirmation.cshtml
@@ -72,6 +72,10 @@ ViewData["Title"] = "Booking confirmation";
                                 }
 
                             }
+                            else
+                            {
+                                <td>Map and large document reading room</td>
+                            }
                         </tr>
                         <tr>
                             <th scope="row">Seat number</th>
