--- a/book-a-reading-room-visit.web/Views/Booking/SecureBooking.cshtml
+++ b/book-a-reading-room-visit.web/Views/Booking/SecureBooking.cshtml
@@ -62,6 +62,10 @@
                                     <td>Map and large document reading room</td>
                                 }
                             }
+                            else
+                            {
+                                <td>Map and large document reading room</td>
+                            }
                         </tr>
                     </tbody>
                 </table>
