--- a/book-a-reading-room-visit.web/Views/Booking/SecureBooking.cshtml
+++ b/book-a-reading-room-visit.web/Views/Booking/SecureBooking.cshtml
@@ -91,7 +91,7 @@
             <div class="col-md-12">
                 <div class="prompt-grey full-width">
                     <p class="bold-text">You have 20 minutes to enter your details.</p>
-                    <span id="timer">Enter you details by @($"{Model.ExpiredBy:hh:mm tt}") British Summer Time (BST).</span>
+                    <span id="timer">Enter your details by @($"{Model.ExpiredBy:hh:mm tt}") British Summer Time (BST).</span>
                     <small>If you do not complete the form by this time we will cancel your seat and you will need to start the process again.</small>
                 </div>
             </div>
