--- a/book-a-reading-room-visit.web/Views/Booking/SecureBooking.cshtml
+++ b/book-a-reading-room-visit.web/Views/Booking/SecureBooking.cshtml
@@ -117,7 +117,13 @@
                             </p>
 
                             @Html.TextBoxFor(Model => Model.Ticket, new { placeholder = "Enter ticket number" })
-                            <span id="ticket-error" class="form-error">@Html.ValidationMessageFor(Model => Model.Ticket)</span>
+
+                            @if (ViewData.ModelState["Ticket"] != null)
+                            {
+                                if (ViewData.ModelState["Ticket"].Errors.Count() > 0) { 
+                                    @Html.ValidationMessageFor(Model => Model.Ticket, "", new { @class = "form-error" })
+                                }
+                            }
 
                             <div class="prompt-white max-width-480 margin-top">
                                 <p>If you don’t have a valid reader’s ticket or temporary reader’s ticket number, you won’t be able to proceed.</p>
@@ -135,11 +141,25 @@
 
                             <label for="firstname" class="sr-only">First name</label>
                             @Html.TextBoxFor(Model => Model.FirstName, new { placeholder = "Enter first name" })
-                            <span id="firstname-error" class="form-error">@Html.ValidationMessageFor(Model => Model.FirstName)</span>
+
+                            @if (ViewData.ModelState["FirstName"] != null)
+                            {
+                                if (ViewData.ModelState["FirstName"].Errors.Count() > 0)
+                                {
+                                    @Html.ValidationMessageFor(Model => Model.FirstName, "", new { @class = "form-error" })
+                                }
+                            }
 
                             <label for="lastname" class="sr-only">Last name</label>
                             @Html.TextBoxFor(Model => Model.LastName, new { placeholder = "Enter last name" })
-                            <span id="lastname-error" class="form-error">@Html.ValidationMessageFor(Model => Model.LastName)</span>
+
+                            @if (ViewData.ModelState["LastName"] != null)
+                            {
+                                if (ViewData.ModelState["LastName"].Errors.Count() > 0)
+                                {
+                                    @Html.ValidationMessageFor(Model => Model.LastName, "", new { @class = "form-error" })
+                                }
+                            }
                         </div>
                     </fieldset>
 
@@ -154,8 +174,22 @@
                             </p>
 
                             @Html.TextBoxFor(Model => Model.Email, new { placeholder = "Enter email address" })
-                            <span id="email-error" class="form-error">@Html.ValidationMessageFor(Model => Model.Email)</span>
-                            <span id="email-phone-error" class="emphasis-error">@Html.ValidationMessage("email-phone")</span>
+
+                            @if (ViewData.ModelState["Email"] != null)
+                            {
+                                if (ViewData.ModelState["Email"].Errors.Count() > 0)
+                                {
+                                    @Html.ValidationMessageFor(Model => Model.Email, "", new { @class = "form-error" })
+                                }
+                            }
+
+                            @if (ViewData.ModelState["email-phone"] != null)
+                            {
+                                if (ViewData.ModelState["email-phone"].Errors.Count() > 0)
+                                {
+                                    @Html.ValidationMessage("email-phone", "", new { @class = "form-error" })
+                                }
+                            }
                         </div>
 
                         <div class="form-row">
@@ -166,7 +200,14 @@
                             </p>
 
                             @Html.TextBoxFor(Model => Model.Phone, new { id = "phone" })
-                            <span id="email-phone-error" class="emphasis-error">@Html.ValidationMessage("email-phone")</span>
+
+                            @if (ViewData.ModelState["email-phone"] != null)
+                            {
+                                if (ViewData.ModelState["email-phone"].Errors.Count() > 0)
+                                {
+                                    @Html.ValidationMessage("email-phone", "", new { @class = "form-error" })
+                                }
+                            }
                         </div>
                     </fieldset>
 
@@ -176,13 +217,27 @@
                         <div class="form-row checkbox">
                             @Html.CheckBoxFor(Model => Model.AcceptTsAndCs, new { id = "terms-conditions" })
                             <label for="terms-conditions">Accept our <a href="#">terms of use</a></label>
-                            <span id="terms-conditions-error" class="form-error">@Html.ValidationMessageFor(Model => Model.AcceptTsAndCs)</span>
+
+                            @if (ViewData.ModelState["AcceptTsAndCs"] != null)
+                            {
+                                if (ViewData.ModelState["AcceptTsAndCs"].Errors.Count() > 0)
+                                {
+                                    @Html.ValidationMessageFor(Model => Model.AcceptTsAndCs, "", new { @class = "form-error" })
+                                }
+                            }
                         </div>
 
                         <div class="form-row checkbox">
                             @Html.CheckBoxFor(Model => Model.AcceptCovidCharter, new { id = "covid-charter" })
                             <label for="covid-charter">Accept our <a href="#">COVID-19 Visitor Charter</a> (PDF; opens in a new window)</label>
-                            <span id="covid-charter-error" class="form-error">@Html.ValidationMessageFor(Model => Model.AcceptCovidCharter)</span>
+
+                            @if (ViewData.ModelState["AcceptCovidCharter"] != null)
+                            {
+                                if (ViewData.ModelState["AcceptCovidCharter"].Errors.Count() > 0)
+                                {
+                                    @Html.ValidationMessageFor(Model => Model.AcceptCovidCharter, "", new { @class = "form-error" })
+                                }
+                            }
                         </div>
 
                         <div class="form-row checkbox">
