Refactor error message to use Hhtml.ValidationMessageFor method

--- a/book-a-reading-room-visit.web/Views/Home/Availability.cshtml
+++ b/book-a-reading-room-visit.web/Views/Home/Availability.cshtml
@@ -129,7 +129,7 @@
                 <h3>Available dates</h3>
                 @if (!string.IsNullOrWhiteSpace(Model.ErrorMessage))
                 {
-                    <span class="error-message">@Model.ErrorMessage</span>
+                    @Html.ValidationMessageFor(Model => Model.ErrorMessage, "", new { @class = "form-error" })
                 }
 
                 <ul>
