Refactor error messages to use shortened null check

--- a/book-a-reading-room-visit.web/Views/Booking/SecureBooking.cshtml
+++ b/book-a-reading-room-visit.web/Views/Booking/SecureBooking.cshtml
@@ -118,11 +118,9 @@
 
                             @Html.TextBoxFor(Model => Model.Ticket, new { placeholder = "Enter ticket number" })
 
-                            @if (ViewData.ModelState["Ticket"] != null)
+                            @if (ViewData.ModelState["Ticket"]?.Errors.Count() > 0)
                             {
-                                if (ViewData.ModelState["Ticket"].Errors.Count() > 0) { 
-                                    @Html.ValidationMessageFor(Model => Model.Ticket, "", new { @class = "form-error" })
-                                }
+                                @Html.ValidationMessageFor(Model => Model.Ticket, "", new { @class = "form-error" })
                             }
 
                             <div class="prompt-white max-width-480 margin-top">
@@ -142,23 +140,17 @@
                             <label for="firstname" class="sr-only">First name</label>
                             @Html.TextBoxFor(Model => Model.FirstName, new { placeholder = "Enter first name" })
 
-                            @if (ViewData.ModelState["FirstName"] != null)
+                            @if (ViewData.ModelState["FirstName"]?.Errors.Count() > 0)
                             {
-                                if (ViewData.ModelState["FirstName"].Errors.Count() > 0)
-                                {
-                                    @Html.ValidationMessageFor(Model => Model.FirstName, "", new { @class = "form-error" })
-                                }
+                                @Html.ValidationMessageFor(Model => Model.FirstName, "", new { @class = "form-error" })
                             }
 
                             <label for="lastname" class="sr-only">Last name</label>
                             @Html.TextBoxFor(Model => Model.LastName, new { placeholder = "Enter last name" })
 
-                            @if (ViewData.ModelState["LastName"] != null)
+                            @if (ViewData.ModelState["LastName"]?.Errors.Count() > 0)
                             {
-                                if (ViewData.ModelState["LastName"].Errors.Count() > 0)
-                                {
-                                    @Html.ValidationMessageFor(Model => Model.LastName, "", new { @class = "form-error" })
-                                }
+                                @Html.ValidationMessageFor(Model => Model.LastName, "", new { @class = "form-error" })
                             }
                         </div>
                     </fieldset>
@@ -175,20 +167,14 @@
 
                             @Html.TextBoxFor(Model => Model.Email, new { placeholder = "Enter email address" })
 
-                            @if (ViewData.ModelState["Email"] != null)
+                            @if (ViewData.ModelState["Email"]?.Errors.Count() > 0)
                             {
-                                if (ViewData.ModelState["Email"].Errors.Count() > 0)
-                                {
-                                    @Html.ValidationMessageFor(Model => Model.Email, "", new { @class = "form-error" })
-                                }
+                                @Html.ValidationMessageFor(Model => Model.Email, "", new { @class = "form-error" })
                             }
 
-                            @if (ViewData.ModelState["email-phone"] != null)
+                            @if (ViewData.ModelState["email-phone"]?.Errors.Count() > 0)
                             {
-                                if (ViewData.ModelState["email-phone"].Errors.Count() > 0)
-                                {
-                                    @Html.ValidationMessage("email-phone", "", new { @class = "form-error" })
-                                }
+                                @Html.ValidationMessage("email-phone", "", new { @class = "form-error" })
                             }
                         </div>
 
@@ -201,12 +187,9 @@
 
                             @Html.TextBoxFor(Model => Model.Phone, new { id = "phone" })
 
-                            @if (ViewData.ModelState["email-phone"] != null)
+                            @if (ViewData.ModelState["email-phone"]?.Errors.Count() > 0)
                             {
-                                if (ViewData.ModelState["email-phone"].Errors.Count() > 0)
-                                {
-                                    @Html.ValidationMessage("email-phone", "", new { @class = "form-error" })
-                                }
+                                @Html.ValidationMessage("email-phone", "", new { @class = "form-error" })
                             }
                         </div>
                     </fieldset>
@@ -218,12 +201,9 @@
                             @Html.CheckBoxFor(Model => Model.AcceptTsAndCs, new { id = "terms-conditions" })
                             <label for="terms-conditions">Accept our <a href="#">terms of use</a></label>
 
-                            @if (ViewData.ModelState["AcceptTsAndCs"] != null)
+                            @if (ViewData.ModelState["AcceptTsAndCs"]?.Errors.Count() > 0)
                             {
-                                if (ViewData.ModelState["AcceptTsAndCs"].Errors.Count() > 0)
-                                {
-                                    @Html.ValidationMessageFor(Model => Model.AcceptTsAndCs, "", new { @class = "form-error" })
-                                }
+                                @Html.ValidationMessageFor(Model => Model.AcceptTsAndCs, "", new { @class = "form-error" })
                             }
                         </div>
 
@@ -231,12 +211,9 @@
                             @Html.CheckBoxFor(Model => Model.AcceptCovidCharter, new { id = "covid-charter" })
                             <label for="covid-charter">Accept our <a href="#">COVID-19 Visitor Charter</a> (PDF; opens in a new window)</label>
 
-                            @if (ViewData.ModelState["AcceptCovidCharter"] != null)
+                            @if (ViewData.ModelState["AcceptCovidCharter"]?.Errors.Count() > 0)
                             {
-                                if (ViewData.ModelState["AcceptCovidCharter"].Errors.Count() > 0)
-                                {
-                                    @Html.ValidationMessageFor(Model => Model.AcceptCovidCharter, "", new { @class = "form-error" })
-                                }
+                                @Html.ValidationMessageFor(Model => Model.AcceptCovidCharter, "", new { @class = "form-error" })
                             }
                         </div>
 
